syntax = "proto3";

option csharp_namespace = "mvp.around_api.Services";

package group;

service GrpcGroup {
  // Sends a greeting
  rpc GetGroups (GetGroupsRequest) returns (GetGroupsResponse);
  rpc CreateGroup (CreateGroupRequest) returns (CreateGroupResponse);
  rpc LeaveGroup (LeaveGroupRequest) returns (LeaveGroupResponse);
  rpc UpdateGroup (UpdateGroupRequest) returns (UpdateGroupResponse);
}

// Requests
message GetGroupsRequest {
}

message CreateGroupRequest {
    GroupDto Group = 1;
}

message LeaveGroupRequest {
    int32 Id = 1;
}

message UpdateGroupRequest {
    GroupDto Group = 1;
}

// Responses
message GetGroupsResponse {
    bool Success = 1;
    string Message = 2;
    int32 UserId = 3;
    repeated GroupDto Groups = 4;
}

message CreateGroupResponse {
    bool Success = 1;
    string Message = 2;
    int32 Id = 3;
}

message LeaveGroupResponse {
    bool Success = 1;
    string Message = 2;
}

message UpdateGroupResponse {
    bool Success = 1;
    string Message = 2;
}

// Nested models
message GroupDto {
    int32 Id = 1;
    string Label = 2;
    string Password = 3;
    int32 Role = 4;
}